--- a/index.html
+++ b/index.html
@@ -820,16 +820,13 @@ function openWindow(id, originEl) {
 }
 
 function popExplode(rect) {
-  // Three-phase canvas animation:
-  // PHASE 1 — SQUEEZE: window squishes toward its center like a ball being born (~18 frames)
-  // PHASE 2 — FALL:    the "ball" drops with gravity and bounces slightly (~20 frames)
-  // PHASE 3 — DITHER:  ball dissolves outward using a Bayer dither pattern (~50 frames)
+  // Single continuous animation — no phase state machine.
+  // Everything is anchored to (ballX, ballY) which moves through all phases.
+  // Cells store offsets RELATIVE to window center so they always follow the ball.
 
   const cx = rect.left + rect.width  / 2;
   const cy = rect.top  + rect.height / 2;
-  const COLORS = ['#c0c0c0','#d8d8d8','#ffffff','#a0a0a0','#808080','#606060'];
 
-  // ── Bayer 4×4 threshold matrix (classic ordered dither) ──
   const BAYER = [
     [ 0, 8, 2,10],
     [12, 4,14, 6],
@@ -837,213 +834,173 @@ function popExplode(rect) {
     [15, 7,13, 5]
   ];
   const BAYER_SIZE = 4;
-  const TILE = 4; // px per dither "pixel" — big enough to read as lo-fi
+  const TILE  = 5;   // dither pixel size
+  const GRID  = 5;   // cell grid size
+  const COLORS = ['#c0c0c0','#d0d0d0','#e0e0e0','#b0b0b0','#909090','#ffffff'];
 
-  // ── Build pixel grid for dither phase ──
-  // Each cell knows its screen position and dither threshold
-  const GRID = 5; // pixel grid size for particle phase
+  // Build cells with offsets FROM window center (not absolute screen coords)
   const cols = Math.ceil(rect.width  / GRID);
   const rows = Math.ceil(rect.height / GRID);
   const cells = [];
   for (let r = 0; r < rows; r++) {
     for (let c = 0; c < cols; c++) {
-      const px = rect.left + c * GRID;
-      const py = rect.top  + r * GRID;
-      // Distance from center normalized 0-1
-      const dx = (px + GRID/2 - cx) / (rect.width  / 2);
-      const dy = (py + GRID/2 - cy) / (rect.height / 2);
-      const distN = Math.min(1, Math.sqrt(dx*dx + dy*dy));
-      const bThresh = BAYER[r % BAYER_SIZE][c % BAYER_SIZE] / 16; // 0-1
-      cells.push({ px, py, dx, dy, distN, bThresh,
+      // offset from center
+      const ox = (c * GRID) - rect.width  / 2;
+      const oy = (r * GRID) - rect.height / 2;
+      const distN = Math.min(1, Math.sqrt(
+        Math.pow(ox / (rect.width  / 2), 2) +
+        Math.pow(oy / (rect.height / 2), 2)
+      ));
+      const bThresh = BAYER[r % BAYER_SIZE][c % BAYER_SIZE] / 16;
+      cells.push({ ox, oy, distN, bThresh,
         color: COLORS[Math.floor(Math.random() * COLORS.length)] });
     }
   }
 
-  // ── Phase state ──
-  const SQUEEZE_FRAMES = 18;
-  const FALL_FRAMES    = 22;
-  const DITHER_FRAMES  = 55;
+  // Animation timeline (all in frames at ~60fps)
+  const T_SQUEEZE_END = 18;  // squeeze finishes
+  const T_FALL_END    = 40;  // fall finishes
+  const T_DONE        = 95;  // dither fully gone
 
-  let phase = 1;
   let frame = 0;
 
-  // Ball state for fall phase
-  let ballX = cx, ballY = cy;
-  let ballW = 30, ballH = 30; // starts small after squeeze
+  // Ball always lives at (ballX, ballY) — window dimensions squeeze into it
+  let ballX  = cx;
+  let ballY  = cy;
   let ballVY = 0;
-  let ballYAtPhase3Start = cy; // set when phase 3 begins
-  const GRAVITY = 0.9;
+  const GRAVITY = 0.7;
 
-  function easeOut(t, exp=2.5) { return 1 - Math.pow(1 - t, exp); }
-  function easeIn(t,  exp=2)   { return Math.pow(t, exp); }
+  // Window rect dimensions squeeze toward ball size over squeeze phase
+  const BALL_R = 15; // final ball radius
+
+  function easeIn(t, e=2)  { return Math.pow(Math.min(1,t), e); }
+  function easeOut(t, e=2) { return 1 - Math.pow(1 - Math.min(1,t), e); }
 
   function drawFrame() {
     zoomCtx.clearRect(0, 0, zoomCanvas.width, zoomCanvas.height);
-    const t = frame / (
-      phase === 1 ? SQUEEZE_FRAMES :
-      phase === 2 ? FALL_FRAMES    : DITHER_FRAMES
-    );
 
-    // ────────────────────────────────────────
-    // PHASE 1 — SQUEEZE TO BALL
-    // ────────────────────────────────────────
-    if (phase === 1) {
+    if (frame >= T_DONE) {
+      zoomCtx.clearRect(0, 0, zoomCanvas.width, zoomCanvas.height);
+      return;
+    }
+
+    // ── SQUEEZE phase (0 → T_SQUEEZE_END) ──
+    // Window shape squishes down to a ball, all anchored to (ballX, ballY)
+    if (frame <= T_SQUEEZE_END) {
+      const t  = frame / T_SQUEEZE_END;
       const te = easeIn(t, 3);
-      // Width squishes inward, height squishes downward, converging to a circle
-      const w = rect.width  * (1 - te) + ballW * te;
-      const h = rect.height * (1 - te) + ballH * te;
-      const rx = cx - w / 2;
-      const ry = cy - h / 2;
 
-      // Fill: mac gray → white as it collapses
+      const w = rect.width  * (1 - te) + BALL_R * 2 * te;
+      const h = rect.height * (1 - te) + BALL_R * 2 * te;
+      // ballY stays at cy during squeeze — no movement yet
       const grayVal = Math.round(192 + te * 63);
-      zoomCtx.fillStyle = `rgb(${grayVal},${grayVal},${grayVal})`;
+      const radius  = BALL_R * te;
+
       zoomCtx.globalAlpha = 1;
-
-      // Draw as rounded rect — rounder as it squeezes
-      const radius = (Math.min(w, h) / 2) * te;
+      zoomCtx.fillStyle   = `rgb(${grayVal},${grayVal},${grayVal})`;
       zoomCtx.beginPath();
-      zoomCtx.roundRect(Math.round(rx), Math.round(ry), Math.round(w), Math.round(h), radius);
+      zoomCtx.roundRect(
+        Math.round(ballX - w/2), Math.round(ballY - h/2),
+        Math.round(w), Math.round(h), radius
+      );
       zoomCtx.fill();
-
-      // Pixel border
       zoomCtx.strokeStyle = '#000';
       zoomCtx.lineWidth = 2;
       zoomCtx.stroke();
 
-      // Dither the edges: draw a checkerboard ring just inside the border
-      // so it looks like the window is pixellating as it squeezes
-      if (te > 0.3) {
-        const ditherAlpha = (te - 0.3) / 0.7;
-        zoomCtx.globalAlpha = ditherAlpha * 0.7;
-        const ringW = 8;
-        for (let px = Math.round(rx); px < Math.round(rx + w); px += TILE) {
-          for (let py = Math.round(ry); py < Math.round(ry + h); py += TILE) {
-            const bx = Math.floor((px - Math.round(rx)) / TILE) % BAYER_SIZE;
-            const by = Math.floor((py - Math.round(ry)) / TILE) % BAYER_SIZE;
+      // Dither edge eating inward as squeeze progresses
+      if (te > 0.25) {
+        const da = (te - 0.25) / 0.75;
+        zoomCtx.globalAlpha = da * 0.8;
+        for (let px = Math.round(ballX - w/2); px < Math.round(ballX + w/2); px += TILE) {
+          for (let py = Math.round(ballY - h/2); py < Math.round(ballY + h/2); py += TILE) {
+            const bx = Math.floor((px - Math.round(ballX - w/2)) / TILE) % BAYER_SIZE;
+            const by = Math.floor((py - Math.round(ballY - h/2)) / TILE) % BAYER_SIZE;
             const thresh = BAYER[by][bx] / 16;
-            // Only draw dither ring near edges
-            const insetX = Math.min(px - Math.round(rx), Math.round(rx + w) - px) / w;
-            const insetY = Math.min(py - Math.round(ry), Math.round(ry + h) - py) / h;
-            const edgeness = 1 - Math.min(insetX, insetY) * 8;
-            if (edgeness > 0 && thresh < edgeness * ditherAlpha) {
-              zoomCtx.fillStyle = '#000';
+            const insetX = Math.min(px - Math.round(ballX-w/2), Math.round(ballX+w/2) - px) / w;
+            const insetY = Math.min(py - Math.round(ballY-h/2), Math.round(ballY+h/2) - py) / h;
+            const edgeness = 1 - Math.min(insetX, insetY) * 6;
+            if (edgeness > 0 && thresh < edgeness * da) {
+              zoomCtx.fillStyle = '#111';
               zoomCtx.fillRect(px, py, TILE, TILE);
             }
           }
         }
         zoomCtx.globalAlpha = 1;
       }
-
-      frame++;
-      if (frame >= SQUEEZE_FRAMES) {
-        phase = 2;
-        frame = 0;
-        ballY = cy;
-        ballVY = -3; // small upward pop before falling
-      }
-      requestAnimationFrame(drawFrame);
     }
 
-    // ────────────────────────────────────────
-    // PHASE 2 — BALL FALLS WITH GRAVITY
-    // ────────────────────────────────────────
-    else if (phase === 2) {
+    // ── FALL phase (T_SQUEEZE_END → T_FALL_END) ──
+    // Ball falls under gravity, dither cells follow because they use ballX/ballY
+    else if (frame <= T_FALL_END) {
       ballVY += GRAVITY;
       ballY  += ballVY;
 
-      // Ball shrinks slightly as it falls (squash & stretch)
-      const stretch = 1 + Math.abs(ballVY) * 0.015;
-      const w = ballW / stretch;
-      const h = ballH * stretch;
+      const stretch = 1 + Math.abs(ballVY) * 0.02;
+      const bw = BALL_R * 2 / stretch;
+      const bh = BALL_R * 2 * stretch;
 
-      zoomCtx.globalAlpha = 1 - easeIn(t, 2) * 0.1; // barely fades
-      zoomCtx.fillStyle = '#e8e8e8';
+      zoomCtx.globalAlpha = 1;
+      zoomCtx.fillStyle   = '#e8e8e8';
       zoomCtx.beginPath();
-      zoomCtx.ellipse(Math.round(ballX), Math.round(ballY), Math.round(w/2), Math.round(h/2), 0, 0, Math.PI*2);
+      zoomCtx.ellipse(Math.round(ballX), Math.round(ballY), Math.round(bw/2), Math.round(bh/2), 0, 0, Math.PI*2);
       zoomCtx.fill();
       zoomCtx.strokeStyle = '#000';
-      zoomCtx.lineWidth = 2;
+      zoomCtx.lineWidth   = 2;
       zoomCtx.stroke();
       zoomCtx.globalAlpha = 1;
-
-      frame++;
-      if (frame >= FALL_FRAMES) {
-        phase = 3;
-        frame = 0;
-        // Snapshot where the ball is RIGHT NOW so phase 3 starts
-        // the dither grid at this exact position — no jump
-        ballYAtPhase3Start = ballY;
-      }
-      requestAnimationFrame(drawFrame);
     }
 
-    // ────────────────────────────────────────
-    // PHASE 3 — DITHERED DISSOLVE
-    // Ordered dither: cells disappear based on Bayer threshold vs fade progress.
-    // Cells furthest from center vanish first, giving an "imploding" dither.
-    // ────────────────────────────────────────
+    // ── DITHER DISSOLVE phase (T_FALL_END → T_DONE) ──
+    // Cells draw at (ballX + cell.ox, ballY + cell.oy) — always follow ball
     else {
-      if (frame >= DITHER_FRAMES) {
-        zoomCtx.clearRect(0, 0, zoomCanvas.width, zoomCanvas.height);
-        return;
-      }
-
-      // te goes 0→1 over dither phase — slow ease so it lingers
-      const te = easeOut(t, 1.6);
-
-      // Ball keeps falling — dither grid follows it exactly
-      ballVY += GRAVITY * 0.5;
+      ballVY += GRAVITY * 0.4;
       ballY  += ballVY;
 
-      // dropY is relative to where the ball WAS when phase 3 started
-      // so the dither grid begins at the ball's position and moves with it
-      const dropY = ballY - ballYAtPhase3Start;
+      const t  = (frame - T_FALL_END) / (T_DONE - T_FALL_END);
+      const te = easeOut(t, 1.5);
 
-      // Draw dithered window ghost — offset by dropY each frame
+      // Draw cells — their position is ballX/ballY + their stored offset
       cells.forEach(cell => {
-        // Dissolve from edges inward using distN + Bayer threshold
-        const dissolveAt = cell.distN * 0.5 + cell.bThresh * 0.5;
+        const dissolveAt = cell.distN * 0.55 + cell.bThresh * 0.45;
         if (te > dissolveAt) return;
 
-        const proximity = Math.abs(te - dissolveAt);
+        const proximity = dissolveAt - te;
         let alpha;
-        if (proximity < 0.08) {
-          // Dither fringe: crispy dissolve edge
-          alpha = cell.bThresh < (1 - proximity / 0.08) ? 0.9 : 0;
+        if (proximity < 0.1) {
+          // Dither fringe — crispy dissolve edge
+          alpha = (cell.bThresh < proximity / 0.1) ? 0 : 0.85;
         } else {
-          alpha = Math.max(0, 1 - te * 0.4);
+          alpha = Math.max(0, 1 - te * 0.5);
         }
-
         if (alpha <= 0) return;
+
+        // Screen position = ball center + cell offset
+        // Snap to TILE grid for chunky pixel look
+        const sx = Math.round((ballX + cell.ox) / TILE) * TILE;
+        const sy = Math.round((ballY + cell.oy) / TILE) * TILE;
+
         zoomCtx.globalAlpha = alpha;
-        zoomCtx.fillStyle = cell.color;
-        // cell.px/py are original positions — add dropY to follow the ball
-        zoomCtx.fillRect(
-          Math.round(cell.px / TILE) * TILE,
-          Math.round((cell.py + dropY) / TILE) * TILE,
-          GRID, GRID
-        );
+        zoomCtx.fillStyle   = cell.color;
+        zoomCtx.fillRect(sx, sy, GRID, GRID);
       });
 
-      // Ball drawn on top, fading out as dither takes over
-      const ballAlpha = Math.max(0, 1 - te * 2.2);
+      // Ball ghost fades out quickly
+      const ballAlpha = Math.max(0, 1 - te * 3);
       if (ballAlpha > 0) {
         zoomCtx.globalAlpha = ballAlpha;
-        zoomCtx.fillStyle = '#d8d8d8';
+        zoomCtx.fillStyle   = '#d0d0d0';
         zoomCtx.beginPath();
-        zoomCtx.ellipse(Math.round(ballX), Math.round(ballY), ballW/2, ballH/2, 0, 0, Math.PI*2);
+        zoomCtx.ellipse(Math.round(ballX), Math.round(ballY), BALL_R, BALL_R, 0, 0, Math.PI*2);
         zoomCtx.fill();
-        zoomCtx.strokeStyle = '#000';
-        zoomCtx.lineWidth = 1.5;
-        zoomCtx.stroke();
         zoomCtx.globalAlpha = 1;
       }
 
       zoomCtx.globalAlpha = 1;
-      frame++;
-      requestAnimationFrame(drawFrame);
     }
+
+    frame++;
+    requestAnimationFrame(drawFrame);
   }
 
   requestAnimationFrame(drawFrame);
